crates/weft-snapshots/tests/snapshots/html/corpus-dashboard.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-dashboard as html
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Team dashboard</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
a { display: inline-block; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="dashboard" aria-label="Team dashboard" data-state="ready">
  <div data-weft-id="header" class="weft-row" data-align="center" data-wrap style="gap: var(--weft-space-xl)">
    <h1 data-weft-id="title" data-bind="text:$.team.name"></h1>
    <div data-weft-id="updated" data-tone="muted" data-weft-kind="text" data-bind="text:$.updatedAt"></div>
  </div>
  <div data-weft-id="stats" class="weft-grid" style="grid-template-columns: repeat(3, minmax(0, 1fr)); gap: var(--weft-space-lg)">
    <section data-weft-id="velocity" aria-label="Velocity">
      <header data-weft-slot="header">
        <h2 data-weft-id="velocity-title">Velocity</h2>
      </header>
      <div data-weft-id="velocity-value" data-tone="success" data-weft-kind="text" data-bind="text:$.stats.velocity"></div>
    </section>
    <section data-weft-id="bugs" aria-label="Open bugs">
      <header data-weft-slot="header">
        <h2 data-weft-id="bugs-title">Open bugs</h2>
      </header>
      <div data-weft-id="bugs-value" data-tone="warning" data-weft-kind="text" data-bind="text:$.stats.bugs"></div>
    </section>
    <section data-weft-id="incidents" aria-label="Incidents">
      <header data-weft-slot="header">
        <h2 data-weft-id="incidents-title">Incidents</h2>
      </header>
      <div data-weft-id="incidents-value" data-tone="danger" data-weft-kind="text" data-bind="text:$.stats.incidents"></div>
    </section>
  </div>
  <div data-weft-id="notices" class="weft-stack" data-align="stretch" style="gap: var(--weft-space-sm)">
    <div data-weft-id="release" role="alert" data-tone="info">Release 2.4 ships on Friday.</div>
    <div data-weft-id="backup" role="alert" data-tone="success" data-bind="text:$.backupStatus"></div>
    <div data-weft-id="quota" role="alert" data-tone="warning">
      <div data-weft-id="quota-text" data-weft-kind="text">Storage is 90% full.</div>
      <a data-weft-id="quota-link" href="https://example.com/storage">Manage storage</a>
    </div>
  </div>
  <div data-weft-id="footer" class="weft-stack" data-align="end" style="gap: var(--weft-space-xs)">
    <div data-weft-id="owner" data-tone="default" data-weft-kind="text">Owned by the platform team</div>
    <div data-weft-id="footer-links" class="weft-row" data-align="start" style="gap: var(--weft-space-md)">
      <a data-weft-id="docs" href="/docs">Docs</a><a data-weft-id="status" href="#" data-bind="href:$.statusUrl">Status page</a>
    </div>
  </div>
</main>
</body>
</html>
