crates/weft-snapshots/tests/snapshots/html/corpus-data-table.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-data-table as html
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Users</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
a { display: inline-block; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="users" aria-label="Users">
  <h1 data-weft-id="title">Users</h1>
  <table data-weft-id="table" aria-label="Users">
    <thead>
      <tr>
        <th data-weft-id="col-name" scope="col" aria-sort="ascending" data-action="press:users.sort">Name</th>
        <th data-weft-id="col-email" scope="col" aria-sort="none" data-action="press:users.sort">Email</th>
        <th data-weft-id="col-role" scope="col" aria-sort="none" data-action="press:users.sort">Role</th>
        <th data-weft-id="col-actions" scope="col">Actions</th>
      </tr>
    </thead>
    <tbody>
      <template data-weft-id="rows" data-each="$.users" data-as="user">
        <tr data-weft-id="row">
          <td data-weft-id="cell-name">
            <div data-weft-id="user-name" data-weft-kind="text" data-bind="text:$user.name"></div>
          </td>
          <td data-weft-id="cell-email">
            <div data-weft-id="user-email" data-weft-kind="text" data-bind="text:$user.email"></div>
          </td>
          <td data-weft-id="cell-role">
            <div data-weft-id="user-role" data-weft-kind="text" data-bind="text:$user.role"></div>
          </td>
          <td data-weft-id="cell-actions">
            <button data-weft-id="delete" type="button" data-variant="danger" data-action="press:users.delete">Delete</button>
          </td>
        </tr>
      </template>
    </tbody>
  </table>
</main>
</body>
</html>
