crates/weft-snapshots/tests/snapshots/html/corpus-error-state.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-error-state as html
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Load error</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
.weft-field label, .weft-toggle { display: flex; gap: 0.5em; }
.weft-field label { flex-direction: column; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="load-error" aria-label="Load error" data-state="error">
  <div data-weft-id="alert" role="alert" data-tone="danger">
    <h2 data-weft-id="error-title">Could not load your data</h2>
    <p data-weft-id="error-message" data-bind="text:$.error.message"></p>
  </div>
  <div data-weft-id="actions" class="weft-row" style="gap: var(--weft-space-sm)">
    <button data-weft-id="retry" type="button" data-variant="primary" data-action="press:load.retry">Retry</button>
    <a data-weft-id="support" href="#" data-action="press:nav.support">Contact support</a>
  </div>
</main>
</body>
</html>
